<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.senosy.weather.todayWeather">

    <!-- Text View for maximum temp-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MAX"
            android:textAppearance="@style/TextStyle"
            />

        <TextView
            android:id="@+id/max_temp_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#1A237E" />

    </LinearLayout>


    <!-- Text View for Minimum temp-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MIN"
            android:textAppearance="@style/TextStyle"
            />

        <TextView
            android:id="@+id/min_temp_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1A237E" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">


        <!-- Image view for Image  -->

        <ImageView
            android:id="@+id/condition_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Weather Condition"
            />


    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_gravity="center">

        <!-- Text view for humadity key -->

        <TextView
            android:id="@+id/temp_hu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle"
            android:text="@string/Humadity"/>

        <!-- Text view for humadity value -->

        <TextView
            android:id="@+id/humadity_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/temp_hu"
            android:textSize="20sp"
            android:textColor="#1A237E"/>

        <!-- Text view for cloud key -->

        <TextView
            android:id="@+id/cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle"
            android:text="@string/Clouds"
            android:layout_below="@id/humadity_textView"
            />

        <!-- Text view for cloud value -->

        <TextView
            android:id="@+id/cloud_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cloud"
            android:layout_below="@id/humadity_textView"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#1A237E"/>


        <!-- Text view for Condition key -->

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle"
            android:text="@string/Condition"
            android:layout_below="@id/cloud"
            />

        <!-- Text view for Condition value -->

        <TextView
            android:id="@+id/condition_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/condition"
            android:layout_below="@id/cloud"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#1A237E"/>



        <!-- Text view for FeelLike Key -->

        <TextView
            android:id="@+id/feelLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/condition"
            android:textAppearance="@style/TextStyle"
            android:text="@string/Feels_Like"/>

        <!-- TextView for feelLike Value -->

        <TextView
            android:id="@+id/feelLike_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/condition"
            android:layout_toEndOf="@id/feelLike"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1A237E"/>

        <!-- Text view for sun rise Key -->

        <TextView
            android:id="@+id/sunRise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feelLike"
            android:textAppearance="@style/TextStyle"
            android:text="@string/Sun_Rise"/>

        <!-- TextView for sun rise Value -->

        <TextView
            android:id="@+id/sunrise_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feelLike_textView"
            android:layout_toEndOf="@id/sunRise"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1A237E"/>

        <!-- Text view for sun set Key -->

        <TextView
            android:id="@+id/sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sunRise"
            android:textAppearance="@style/TextStyle"
            android:text="@string/Sun_Set"/>

        <!-- TextView for sun set Value -->


        <TextView
            android:id="@+id/sunset_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sunRise"
            android:layout_toEndOf="@id/sunset"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1A237E"/>



    </RelativeLayout>


</FrameLayout>
